2001-01-21  Bruno Haible  <haible@clisp.cons.org>

	Use libtool.
	* Makefile.am (LDADD): Remove ../intl/libintl.$la, not needed any more.
	(l): Remove macro.

2001-01-20  Bruno Haible  <haible@clisp.cons.org>

	* msgcomm.c (main): Options '-<' and '->' want an argument.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* gettext.c: Renamed from gettextp.c. Use included libintl if TESTS
	is defined.
	* setlocale.c: Move to ../tests.
	* Makefile.am (EXTRA_PROGRAMS, all-local, CLEANFILES): Remove.
	(tstgettext_SOURCES): Remove.
	(gettext_SOURCES): Update.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	* msgcmp.c: Include libgettext.h instead of libintl.h, so that the
	configure argument --disable-nls gets respected.
	* msgfmt.c: Likewise.
	* msgmerge.c: Likewise.
	* msgunfmt.c: Likewise.
	* open-po.c: Likewise.
	* po-gram-gen.y: Likewise.
	* po-lex.c: Likewise.
	* xgettext.c: Likewise. Don't include gettext.h.

2001-01-07  Bruno Haible  <haible@clisp.cons.org>

	Assume <stddef.h>, <stdlib.h>, <string.h>, <locale.h> exist.
	* dir-list.c: Likewise.
	* gettextp.c: Likewise.
	* message.c: Likewise.
	* msgcmp.c: Likewise.
	* msgcomm.c: Likewise.
	* msgfmt.c: Likewise.
	* msgmerge.c: Likewise.
	* msgunfmt.c: Likewise.
	* open-po.c: Likewise.
	* po.c: Likewise.
	* setlocale.c: Likewise.
	* str-list.h: Likewise.
	* xget-lex.c: Likewise.
	* xgettext.c: Likewise.

2001-01-06  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (datadir): Assume DATADIRNAME = share.

2001-01-06  Bruno Haible  <haible@clisp.cons.org>

	* setlocale.c: New file.
	* Makefile.am (EXTRA_PROGRAMS): New variable.
	(all-local): New target.
	(CLEANFILES): New variable.
	(tstgettext_SOURCES): New variable.

2001-01-05  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (po-gram-gen.h): Don't use $^, not supported by the
	SUSV2 "make" specification.
	(LDADD): Add @INTLLIBS@. Needed on Solaris without
	--with-included-gettext.
	* po-lex.c (gram_max_allowed_errors): Change type to